boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_layers_primitive_functions_on_c_bridge.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/primitive_functions\")"
---
===== jni/demo.h =====
<c abi support declarations>
int32_t boltffi_function_demo_add(int32_t left, int32_t right);
bool boltffi_function_demo_enabled(bool flag);
FfiStatus boltffi_function_demo_refresh(void);
FfiBuf_u8 boltffi_function_demo_echo_bytes(const uint8_t *bytes_ptr, uintptr_t bytes_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni status helper>
<jni byte-array helpers>
JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1add(JNIEnv *env, jclass cls, jint left, jint right) {
    (void)cls;

    (void)env;
    int32_t __boltffi_result = boltffi_function_demo_add(left, right);

    return (jint)__boltffi_result;
}

JNIEXPORT jboolean JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1enabled(JNIEnv *env, jclass cls, jboolean flag) {
    (void)cls;

    (void)env;
    bool __boltffi_result = boltffi_function_demo_enabled(flag);

    return (jboolean)__boltffi_result;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1refresh(JNIEnv *env, jclass cls) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_function_demo_refresh();

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1echo_1bytes(JNIEnv *env, jclass cls, jbyteArray bytes) {
    (void)cls;

    jbyte *__boltffi_bytes_ptr = NULL;
    jsize __boltffi_bytes_len = 0;

    if (bytes == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");
        goto __boltffi_error;
    }
    __boltffi_bytes_len = (*env)->GetArrayLength(env, bytes);
    __boltffi_bytes_ptr = (*env)->GetByteArrayElements(env, bytes, NULL);
    if (__boltffi_bytes_ptr == NULL) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_echo_bytes((const uint8_t *)__boltffi_bytes_ptr, (uintptr_t)__boltffi_bytes_len);

    if (__boltffi_bytes_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, bytes, __boltffi_bytes_ptr, JNI_ABORT);
        __boltffi_bytes_ptr = NULL;
    }

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    if (__boltffi_bytes_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, bytes, __boltffi_bytes_ptr, JNI_ABORT);
        __boltffi_bytes_ptr = NULL;
    }
    return NULL;
}
