boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_class_handles_and_methods.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/class_handles_and_methods\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    int32_t x;
    int32_t y;
} ___Point;
void boltffi_release_class_demo_engine(uint64_t handle);
uint64_t boltffi_init_class_demo_engine_new(uint64_t seed);
uint32_t boltffi_method_class_demo_engine_version(void);
uint32_t boltffi_method_class_demo_engine_score(uint64_t receiver, ___Point point);
FfiStatus boltffi_method_class_demo_engine_advance(uint64_t receiver, uint32_t delta);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni status helper>
<jni record helpers>
JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1release_1class_1demo_1engine(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;

    (void)env;
    boltffi_release_class_demo_engine(handle);

    return;
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1init_1class_1demo_1engine_1new(JNIEnv *env, jclass cls, jlong seed) {
    (void)cls;

    (void)env;
    uint64_t __boltffi_result = boltffi_init_class_demo_engine_new(seed);

    return (jlong)__boltffi_result;
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1class_1demo_1engine_1version(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    uint32_t __boltffi_result = boltffi_method_class_demo_engine_version();

    return (jint)__boltffi_result;
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1class_1demo_1engine_1score(JNIEnv *env, jclass cls, jlong receiver, jbyteArray point) {
    (void)cls;

    ___Point __boltffi_point_value;

    if (!boltffi_jni_read_record(env, point, (uintptr_t)sizeof(___Point), &__boltffi_point_value)) {
        goto __boltffi_error;
    }

    (void)env;
    uint32_t __boltffi_result = boltffi_method_class_demo_engine_score(receiver, __boltffi_point_value);

    return (jint)__boltffi_result;
__boltffi_error:
    return 0;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1class_1demo_1engine_1advance(JNIEnv *env, jclass cls, jlong receiver, jint delta) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_method_class_demo_engine_advance(receiver, delta);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}
